<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/userLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_username" />

        <TextView
            android:id="@+id/textUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_login" />

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_sign_up" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonInstantUpload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_instant_upload" />

    <Button
        android:id="@+id/buttonDBDebug"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="本地数据测试" />

    <Button
        android:id="@+id/buttonBTToolbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Bluetooth Toolbox" />

    <Button
        android:id="@+id/buttonBTReconnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_reconnect_bt" />
</LinearLayout>
