<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="4dp"
    tools:context="com.presisco.shared.ui.fragment.BaseHistoryFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/label_history_mode"
            android:visibility="gone" />

        <Spinner
            android:id="@+id/spinnerMode"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/label_event" />

        <Spinner
            android:id="@+id/spinnerEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="right" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/monitorHost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/deleteButton"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout">

    </FrameLayout>

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/label_delete" />

</RelativeLayout>
